--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,8 +68,9 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-0;
   }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
